--- a/DesignerRHN/DesignerRHN-war/web/nreportepersonal.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/nreportepersonal.xhtml
@@ -91,7 +91,7 @@
                                          filteredValue="#{controlNReportePersonal.filtrarListInforeportesUsuario}" selectionMode="single" emptyMessage="#{msg['vacio']}"
                                          editable="true" editMode="cell" selection="#{controlNReportePersonal.inforreporteSeleccionado}" >
 
-                                <p:ajax event="rowSelect" listener="#{controlNReportePersonal.seleccionRegistro()}" process="@this" />
+                                <p:ajax event="rowSelect" listener="#{controlNReportePersonal.seleccionRegistro(info)}" process="@this" />
                                 <p:ajax event="rowDblselect" listener="#{controlNReportePersonal.requisitosParaReporte()}" process="@this" />
                                 <p:ajax event="filter" listener="#{controlNReportePersonal.eventoFiltrar()}"/>
                                 <f:event type="preRenderView" listener="#{controlNReportePersonal.recordarSeleccion()}"/>
@@ -105,6 +105,9 @@
                                 </p:column>
 
                                 <p:column id="tipoIR" headerText="#{msg['tipo']}" width="110" sortBy="#{info.tipo}" filterBy="#{info.tipo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding: 0px; width: 110px" >                                  
+                                    <p:cellEditor>
+                                    <f:facet name="output"><h:outputText value="#{info.tipo}"/></f:facet>
+                                    <f:facet name="input">
                                     <p:selectOneMenu value="#{info.tipo}" id="tipoReporte" style="width: 99%; font-weight: bold; "  panelStyle="width: 105px">  
                                         <f:selectItem itemLabel="#{msg['pdf']}" itemValue="PDF" />  
                                         <f:selectItem itemLabel="#{msg['xhtml']}" itemValue="HTML" />  
@@ -112,8 +115,10 @@
                                         <f:selectItem itemLabel="#{msg['xlsx']}" itemValue="XLSX" />  
                                         <f:selectItem itemLabel="#{msg['csv']}" itemValue="CSV" />
                                         <f:selectItem itemLabel="#{msg['docx']}" itemValue="DOCX" />
-                                        <p:ajax listener="#{controlNReportePersonal.modificacionTipoReporte(indice)}" event="change" update="@this" />
+                                        <p:ajax listener="#{controlNReportePersonal.modificacionTipoReporte(info)}" event="change" update=":form:reportesPersonal" />
                                     </p:selectOneMenu>
+                                    </f:facet>
+                                </p:cellEditor>
                                 </p:column>
 
                                 <p:column id="columnaGenerarR" width="19" style="padding-left: 5px;padding: 0px; text-align: center" >                                                              
@@ -171,7 +176,7 @@
                     <p:dialog header="#{msg['reportesR']}" widgetVar="ReportesDialogo" draggable="false" resizable="false" closable="false" id="ReportesDialogo"  
                               showEffect="fade" hideEffect="fade" width="460" modal="true" >
                         <p:dataTable id="lovReportesDialogo" style="width: 430px" var="reportes" value="#{controlNReportePersonal.lovInforeportes}" rowKey="#{reportes.secuencia}"
-                                     selection="#{controlNReportePersonal.inforreporteSeleccionado}" selectionMode="single" widgetVar="lovReportesDialogo" scrollable="true" scrollWidth="445" scrollHeight="250"
+                                     selection="#{controlNReportePersonal.reporteLovSeleccionado}" selectionMode="single" widgetVar="lovReportesDialogo" scrollable="true" scrollWidth="445" scrollHeight="250"
                                      filteredValue="#{controlNReportePersonal.filtrarLovInforeportes}" emptyMessage="#{msg['lovvacio']}">              
                             <p:ajax event="rowSelect" listener="#{controlNReportePersonal.activarAceptar()}" update=":form:aceptarR"/>
                             <p:ajax event="rowDblselect" listener="#{controlNReportePersonal.actualizarSeleccionInforeporte()}"  process="@this"  />
