--- a/DesignerRHN/DesignerRHN-war/web/estadisticas.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/estadisticas.xhtml
@@ -4268,6 +4268,8 @@
                             color: #000000;
                             text-shadow: 0px 0px 6px #ffffff;
                             border-color: blue;
+                            border-top-width: 2px;
+                            border-bottom-width: 3px;
                         }
 
                         /*.tablaTotales .ui-datatable .ui-state-default {*/
