--- a/DesignerRHN/DesignerRHN-war/web/estadisticas.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/estadisticas.xhtml
@@ -619,7 +619,8 @@
                                                       selectionMode="single">
 
                                             <p:ajax event="filter" listener="#{controlParametrosConjuntos.eventoFiltrar()}"/>
-                                            <p:ajax event="rowSelect" listener="#{controlParametrosConjuntos.cambiarSeleccionDefault()}" onstart="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"/>
+                                            <p:ajax event="rowSelect" listener="#{controlParametrosConjuntos.cambiarSeleccionDefault()}" onstart="tablaEstadisticasLB.unselectAllRows()"/>
+                                            <!--onstart="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"-->
 
                                             <p:column headerText="#{msg['descripcion']}" width="220" sortBy="#{info.dimension}" filterBy="#{info.dimension}" filterMatchMode="contains" id="eDimension" filterStyle="display: none; visibility: hidden;">  
                                                 <p:cellEditor> 
@@ -2052,7 +2053,8 @@
                                                  selectionMode="single">
 
                                         <p:ajax event="filter" listener="#{controlParametrosConjuntos.eventoFiltrarLB()}"/>
-                                        <p:ajax event="rowSelect" listener="#{controlParametrosConjuntos.cambiarSeleccionLBDefault()}" onstart="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"/>
+                                        <p:ajax event="rowSelect" listener="#{controlParametrosConjuntos.cambiarSeleccionLBDefault()}" onstart="tablaEstadisticas.unselectAllRows()"/>
+                                                <!--onstart="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()"-->
 
                                         <p:column headerText="#{msg['descripcion']}" width="220" sortBy="#{infoLB.dimension}" filterBy="#{infoLB.dimension}" filterMatchMode="contains" id="eLBDimension" filterStyle="display: none; visibility: hidden;">  
                                             <p:cellEditor> 
@@ -4265,11 +4267,14 @@
                         }
 
                         .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
-                            color: #000000;
-                            text-shadow: 0px 0px 6px #ffffff;
+                            color: #ffffff;
+                            font-weight: bold;
+                            /*text-shadow: 0px 0px 6px #ffffff;*/
+                            text-shadow: 0px 0px 2px #000000;
                             border-color: blue;
+                            /*border-top-width: 2px;*/
                             border-top-width: 2px;
-                            border-bottom-width: 3px;
+                            border-bottom-width: 2px;
                         }
 
                         /*.tablaTotales .ui-datatable .ui-state-default {*/
